# job_search

./: .env.sample  .gitignore  README.md  TASKS.md  app.py  pyproject.toml
api/: manager.py  queries.py
data/: companies.json
db/: connect.py  constants.py  create.py  queries.py  upload.py  utils.py
utils/: reader.py  variables.py
